portfolio update about image

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
         <div class="about-content">
             <div class="about-img">
+                <!-- <img src="./images/about.jpeg" alt="about"> -->
                 <img src="./images/about.jpeg" alt="about">
             </div>
             <div class="about-details">
